Fix center-content: remove align-items center causing narrow text wrapping

--- a/blocks/tab-list/tab-list.css
+++ b/blocks/tab-list/tab-list.css
@@ -195,16 +195,7 @@
 
 /* Center Content variant for tab panels */
 .section[role="tabpanel"].center-content,
-.section[role="tabpanel"].center-content > div {
-    text-align: center;
-}
-
-.section[role="tabpanel"].center-content > div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
+.section[role="tabpanel"].center-content > div,
 .section[role="tabpanel"].center-content p,
 .section[role="tabpanel"].center-content h1,
 .section[role="tabpanel"].center-content h2,
@@ -212,9 +203,8 @@
 .section[role="tabpanel"].center-content h4,
 .section[role="tabpanel"].center-content h5,
 .section[role="tabpanel"].center-content h6 {
-    max-width: 100%;
-    width: 100%;
     text-align: center;
+    max-width: 100%;
 }
 
 /* Tab panel animation */
